=== gtksourceview 2.4.0 ===

2008-09-08  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.4.0

=== gtksourceview 2.3.3 ===

2008-09-08  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.3.3

2008-09-08  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/java.lang: highlight escaped chars
	in strings

2008-09-03  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/sh.lang: fix typo (podp instead
	of popd). Bug #550687.

=== gtksourceview 2.3.2 ===

2008-08-30  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.3.2

2008-08-30  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/po.lang: highlight "fuzzy" and
	"msctxt". Patch by Bob Mauchin.

2008-08-30  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/texinfo.lang:
	fix bug #549044, never ending @ignore block.

2008-08-30  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/python.lang: handle raw string
	separately since they do not contain escaped chars.

2008-08-27  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/xslt.lang: add lang file for xslt.
	* gtksourceview/language-specs/xml.lang: fix match priority bug
	needed for xslt.

2008-08-17  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/gtksourceview.c (draw_spaces_at_iter): special case
	the end iter.

=== gtksourceview 2.3.1 ===

2008-08-11  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.3.1

2008-08-11  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c:
	track when the object has been constructed so that we know the 
	tag-table is there and we can check bracket matches etc. 

2008-08-10  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c 