@@ -1,3 +1,9 @@
+2008-10-29  Yevgen Muntyan  <muntyan@tamu.edu>
+
+	* gtksourceview/gtksourcebuffer.c: Override insert_pixbuf()
+	and insert_child_anchor() methods to notify the syntax
+	highlighting engine about the change. Bug #550687.
+
 === gtksourceview 2.4.0 ===
 
 2008-09-08  Paolo Borelli  <paolo.borelli@katamail.com>
@@ -77,12 +83,12 @@
 2008-08-11  Paolo Borelli  <paolo.borelli@katamail.com>
 
 	* gtksourceview/gtksourcebuffer.c:
-	track when the object has been constructed so that we know the 
-	tag-table is there and we can check bracket matches etc. 
+	track when the object has been constructed so that we know the
+	tag-table is there and we can check bracket matches etc.
 
 2008-08-10  Paolo Borelli  <paolo.borelli@katamail.com>
 
-	* gtksourceview/gtksourcebuffer.c 
+	* gtksourceview/gtksourcebuffer.c
 	(gtk_source_buffer_get_source_marks_at_iter):
 	do not leak list of marks.
 
